--- a/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
+++ b/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
@@ -38,6 +38,7 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="tableView" destination="yGe-mb-WbW" id="EJd-ob-AZ3"/>
                         <segue destination="uzE-JB-UEH" kind="show" identifier="showCommentVC" id="Qdb-fx-bc6"/>
                     </connections>
                 </viewController>
