--- a/Lucuber/Views/CommentHeader/FeedHeaderView.xib
+++ b/Lucuber/Views/CommentHeader/FeedHeaderView.xib
@@ -11,8 +11,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="395" height="353"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="FeedHeaderView" customModule="Lucuber" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="395" height="223"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vug-3X-u0y">
@@ -29,7 +29,7 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u0k-qg-h0H">
-                    <rect key="frame" x="65" y="54" width="315" height="21"/>
+                    <rect key="frame" x="65" y="54" width="42" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -44,23 +44,84 @@
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                 </textView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jHb-d3-Vsb" customClass="FeedMediaView" customModule="Lucuber" customModuleProvider="target">
+                    <rect key="frame" x="340" y="10" width="40" height="40"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="40" id="FQH-20-dw6"/>
+                        <constraint firstAttribute="width" constant="40" id="Tvn-wR-bEY"/>
+                    </constraints>
+                </view>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="A4B-zs-QnZ">
+                    <rect key="frame" x="0.0" y="109" width="395" height="80"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="80" id="Q79-JF-cWP"/>
+                    </constraints>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="N7S-nO-BCg">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                </collectionView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 hours ago" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9jd-Uw-jMw" userLabel="Time Label">
+                    <rect key="frame" x="65" y="197" width="76" height="17"/>
+                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="14"/>
+                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ebf-dB-5ii">
+                    <rect key="frame" x="65" y="109" width="270" height="80"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="80" id="Kga-gd-LlU"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="CIU-x6-rtR" firstAttribute="leading" secondItem="wUE-G8-32M" secondAttribute="leading" id="0mQ-3l-Sga"/>
+                <constraint firstItem="jHb-d3-Vsb" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="0pS-z0-Wcn"/>
                 <constraint firstItem="wUE-G8-32M" firstAttribute="centerY" secondItem="vug-3X-u0y" secondAttribute="centerY" id="1Gb-SQ-Mvf"/>
-                <constraint firstAttribute="trailing" secondItem="u0k-qg-h0H" secondAttribute="trailing" constant="15" id="6Fw-D5-BYy"/>
+                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="u0k-qg-h0H" secondAttribute="trailing" constant="15" id="6Fw-D5-BYy"/>
+                <constraint firstItem="9jd-Uw-jMw" firstAttribute="leading" secondItem="CIU-x6-rtR" secondAttribute="leading" id="6MA-rO-2gq"/>
+                <constraint firstAttribute="trailing" secondItem="Ebf-dB-5ii" secondAttribute="trailing" constant="60" id="7Df-V0-0OJ"/>
+                <constraint firstItem="A4B-zs-QnZ" firstAttribute="top" secondItem="CIU-x6-rtR" secondAttribute="bottom" constant="15" id="9I7-Ho-Z2n"/>
                 <constraint firstAttribute="trailing" secondItem="CIU-x6-rtR" secondAttribute="trailing" constant="15" id="Fvn-sl-Nvn"/>
+                <constraint firstItem="Ebf-dB-5ii" firstAttribute="leading" secondItem="CIU-x6-rtR" secondAttribute="leading" id="O3H-Ku-1Vs"/>
                 <constraint firstItem="u0k-qg-h0H" firstAttribute="top" secondItem="CIU-x6-rtR" secondAttribute="top" id="RMR-ol-D47"/>
                 <constraint firstItem="vug-3X-u0y" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="15" id="TpY-yO-4Jw"/>
+                <constraint firstItem="A4B-zs-QnZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="UDd-lh-gyZ"/>
                 <constraint firstItem="wUE-G8-32M" firstAttribute="leading" secondItem="vug-3X-u0y" secondAttribute="trailing" constant="10" id="Vc6-Me-SfM"/>
                 <constraint firstItem="u0k-qg-h0H" firstAttribute="leading" secondItem="CIU-x6-rtR" secondAttribute="leading" id="aJN-Tn-gv4"/>
                 <constraint firstItem="vug-3X-u0y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="gxm-hO-cVy"/>
                 <constraint firstItem="CIU-x6-rtR" firstAttribute="top" secondItem="vug-3X-u0y" secondAttribute="bottom" constant="4" id="l8r-23-h5E"/>
+                <constraint firstAttribute="trailing" secondItem="A4B-zs-QnZ" secondAttribute="trailing" id="lOC-b3-agu"/>
+                <constraint firstItem="Ebf-dB-5ii" firstAttribute="top" secondItem="A4B-zs-QnZ" secondAttribute="top" id="lW4-bK-mt7"/>
+                <constraint firstAttribute="trailing" secondItem="jHb-d3-Vsb" secondAttribute="trailing" constant="15" id="ubI-Cs-z23"/>
+                <constraint firstItem="9jd-Uw-jMw" firstAttribute="top" secondItem="CIU-x6-rtR" secondAttribute="bottom" constant="103" id="y1n-2U-A1c"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="45.5" y="-103.5"/>
+            <connections>
+                <outlet property="attachmentContainerHeightConstraint" destination="Kga-gd-LlU" id="c0L-Gl-mM2"/>
+                <outlet property="attachmentContainerView" destination="Ebf-dB-5ii" id="Uw2-K3-noQ"/>
+                <outlet property="avatarImageView" destination="vug-3X-u0y" id="1i2-Ny-w5d"/>
+                <outlet property="mediaCollectionView" destination="A4B-zs-QnZ" id="xwp-un-eST"/>
+                <outlet property="mediaView" destination="jHb-d3-Vsb" id="hmo-hS-T9o"/>
+                <outlet property="messageLabel" destination="u0k-qg-h0H" id="NJ7-TA-qzE"/>
+                <outlet property="messageLabelTrailingConstraint" destination="6Fw-D5-BYy" id="Ebd-UV-G3z"/>
+                <outlet property="messageTextView" destination="CIU-x6-rtR" id="g74-y4-xYx"/>
+                <outlet property="messageTextViewHeightConstraint" destination="9f3-1h-l0b" id="xdh-kT-b40"/>
+                <outlet property="messageTextViewTopConstraint" destination="l8r-23-h5E" id="UmY-7O-Okk"/>
+                <outlet property="messageTextViewTrailingConstraint" destination="Fvn-sl-Nvn" id="8wR-Ue-64i"/>
+                <outlet property="nicknameLabel" destination="wUE-G8-32M" id="0iN-Nr-uPt"/>
+                <outlet property="nicknameLabelCenterYConstraint" destination="1Gb-SQ-Mvf" id="z7I-QH-0Y0"/>
+                <outlet property="timeLabel" destination="9jd-Uw-jMw" id="Ixx-tz-jZH"/>
+                <outlet property="timeLabelTopConstraint" destination="y1n-2U-A1c" id="OMN-7o-Shv"/>
+            </connections>
+            <point key="canvasLocation" x="45.5" y="-168.5"/>
         </view>
     </objects>
 </document>
